feat(unlock-app, wedlocks, locksmith) - add support for replyTo (#11393)
* add support for replyTo
